<resources>
    <string name="app_name">NailZip</string>

    <!--    login-->
    <string name="userId">ID</string>
    <string name="userPw">PW</string>
    <string name="findID">아이디 찾기</string>
    <string name="contour">|</string>
    <string name="findPW">비밀번호 찾기</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="fa_email">&#xf0e0;</string>

    <!--    registerque-->
    <string name="regis_notion">어떤 회원으로\n가입하시겠어요?</string>
    <string name="regis_nailshop">NailShop</string>
    <string name="regis_Customer">Customer</string>

    <!--    register-->
    <string name="username">이름</string>
    <string name="useremail">이메일</string>
    <string name="password">비밀번호</string>
    <string name="check_pw">비밀번호 확인</string>
    <string name="phonenum">전화번호</string>
    <string name="shopphonenum">매장 전화번호</string>
    <string name="shopname">네일샵 이름</string>
    <string name="ceoname">운영자 이름</string>
    <string name="address">주소</string>
    <string name="complete">완료</string>

    <!--    storeInfo-->
    <string name="storeInfo">매장등록</string>
    <string name="opentime">영업시간</string>
    <string name="closed">휴무일</string>
    <string name="memo">매장정보</string>
    <string name="menu_nail">네일</string>
    <string name="menu_nail_price">네일 가격</string>
    <string name="menu_pedi">페디</string>
    <string name="menu_pedi_price">페디 가격</string>
    <string name="menuname">이름</string>
    <string name="menuprice">가격</string>
    <string name="next">다음</string>

    <!--    findID/PW-->
    <string name="find_username">사용자 이름</string>
    <string name="findIDView">아이디 찾기</string>
    <string name="foudnIDView">아이디 찾기 결과</string>
    <string name="noID">일치하는 회원정보가 없습니다.</string>
    <string name="find_email">Email</string>
    <string name="findPWView">비밀번호 찾기</string>

    <!--    nailshop-->
    <string name="ex_region">용인시 죽전동</string>
    <string name="sort_recommand">추천순</string>
    <string name="sort_distance">거리순</string>
    <string name="sort_review">리뷰많은순</string>
    <string name="ex_shopname">만두네일</string>
    <string name="ex_rating">5.0</string>
    <string name="ex_count">112</string>
    <string name="ex_time">11:00~21:00</string>
    <string name="ex_closed">일</string>
    <string name="ex_location">경기도 용인시 수지구 현암로 123번길 33</string>

    <!-- Information_home-->
    <string name="ex_title">네일샵 이름</string>
    <string name="Info_opentime">영업시간</string>
    <string name="Info_shop">매장정보</string>
    <string name="ex_info">예약제</string>
    <string name="shop_follow">팔로우</string>
    <string name="location">위치</string>
    <string name="call">전화</string>
    <string name="reservation">예약</string>
    <string name="share">공유</string>
    <string name="img_title">매장 대표 이미지</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    chatting-->
    <string name="title_chatting">채팅</string>
    <string name="ex_name">닉네임</string>
    <string name="ex_content">마지막 내용</string>
    <string name="send">전송</string>

    <!--    setting-->
    <string name="title_setting">설정</string>
    <string name="ex_username">닉네임</string>
    <string name="heart">찜 목록</string>
    <string name="follow">팔로우</string>
    <string name="review">나의 후기</string>
    <string name="edit_nailshop">매장 정보 수정</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="newpw">새 비밀번호</string>
</resources>