<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="25dp"
        android:id="@+id/linear_bg"
        android:background="@drawable/edge">

        // 스크랩 버튼 임시 삭제
<!--        <ImageView-->
<!--            android:id="@+id/img_scrab"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="right"-->
<!--            android:layout_marginRight="6dp"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:src="@drawable/ic_baseline_bookmark_white"/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:id="@+id/tv_shopname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_shopname"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_24"/>
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_rating"
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="("
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/tv_ratingcnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_count"
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=")"
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contour"
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_time"
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(휴무 : "
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"/>

        <TextView
            android:id="@+id/tv_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_closed"
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=")"
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_location"
            android:textColor="#727272"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="25dp"
        android:background="#EBEBEB"/>

</LinearLayout>