<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member.StartActivity"
    android:background="@color/maincolor"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/maincard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="10dp"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="55dp"
                android:src="@drawable/nailzip_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="55dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edge_txtbox">

                <com.example.nailzip.FontAwesomeTextLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/maincolor"/>

                <EditText
                    android:id="@+id/edt_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userId"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="55dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edge_txtbox">

                <com.example.nailzip.FontAwesomeTextLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/maincolor"/>

                <EditText
                    android:id="@+id/edt_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userPw"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="55dp"
                android:layout_marginVertical="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_findID"
                    android:text="@string/findID"
                    android:textSize="12dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/contour"
                    android:textSize="12dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_findPW"
                    android:text="@string/findPW"
                    android:textSize="12dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginHorizontal="55dp"
                app:cornerRadius="21dp"
                android:backgroundTint="@color/maincolor"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginHorizontal="55dp"
                app:cornerRadius="21dp"
                android:backgroundTint="@color/maincolor"/>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>