<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member.FoundIDActivity"
    android:background="@color/maincolor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/maincolor"
        android:backgroundTint="@color/maincolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/maincard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="10dp"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="55dp"
                android:src="@drawable/nailzip_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/foudnIDView"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_gravity="left"
                android:layout_marginHorizontal="55dp"
                android:text="@string/find_email"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="55dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edge_txtbox">

                <TextView
                    android:id="@+id/txt_foundID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/noID"
                    android:background="@android:color/transparent">

                </TextView>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:id="@+id/btn_complete"
                android:text="@string/complete"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginHorizontal="55dp"
                app:cornerRadius="21dp"
                android:backgroundTint="@color/maincolor"/>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>