<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member.RegisterShopActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/nailzip_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/regis_nailshop"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edge_txtbox">

                    <com.example.nailzip.FontAwesomeTextLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp"
                        android:layout_marginHorizontal="20dp"
                        android:textColor="@color/maincolor"/>

                    <EditText
                        android:id="@+id/edt_shopname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shopname"
                        android:textSize="18dp"
                        android:inputType="textPersonName"
                        android:background="@android:color/transparent">

                    </EditText>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edge_txtbox">

                    <com.example.nailzip.FontAwesomeTextLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp"
                        android:layout_marginHorizontal="20dp"
                        android:textColor="@color/maincolor"/>

                    <EditText
                        android:id="@+id/edt_ceoname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ceoname"
                        android:textSize="18dp"
                        android:inputType="textPersonName"
                        android:background="@android:color/transparent">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edge_txtbox">

                    <com.example.nailzip.FontAwesomeTextLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp"
                        android:layout_marginHorizontal="20dp"
                        android:textColor="@color/maincolor"/>

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/useremail"
                        android:textSize="18dp"
                        android:inputType="textEmailAddress"
                        android:background="@android:color/transparent">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edge_txtbox">

                    <com.example.nailzip.FontAwesomeTextLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp"
                        android:layout_marginHorizontal="20dp"
                        android:textColor="@color/maincolor"/>

                    <EditText
                        android:id="@+id/edt_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="18dp"
                        android:inputType="textPassword"
                        android:background="@android:color/transparent">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edge_txtbox">

                    <com.example.nailzip.FontAwesomeTextLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp"
                        android:layout_marginHorizontal="20dp"
                        android:textColor="@color/maincolor"/>

                    <EditText
                        android:id="@+id/edt_pw_check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/check_pw"
                        android:textSize="18dp"
                        android:inputType="textPassword"
                        android:background="@android:color/transparent">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edge_txtbox">

                    <com.example.nailzip.FontAwesomeTextLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp"
                        android:layout_marginHorizontal="20dp"
                        android:textColor="@color/maincolor"/>

                    <EditText
                        android:id="@+id/edt_shopphonenum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shopphonenum"
                        android:textSize="18dp"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:background="@android:color/transparent">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edge_txtbox">

                    <com.example.nailzip.FontAwesomeTextLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp"
                        android:layout_marginHorizontal="20dp"
                        android:textColor="@color/maincolor"/>

                    <EditText
                        android:id="@+id/edt_phonenum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phonenum"
                        android:textSize="18dp"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:background="@android:color/transparent">

                    </EditText>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/edge_txtbox">

                    <com.example.nailzip.FontAwesomeTextLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text=""
                        android:textColor="@color/maincolor"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:textSize="18dp"
                        android:inputType="textPostalAddress"
                        android:maxLength="13"
                        android:background="@android:color/transparent">

                    </EditText>

                </LinearLayout>


            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_complete"
                android:text="@string/complete"
                android:textStyle="bold"
                android:textSize="23dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                app:cornerRadius="45dp"
                android:backgroundTint="@color/maincolor"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>